--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "packageManager": "yarn@3.1.1",
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "@swc/helpers": "~0.5.2",
     "antd": "^5.11.2",
     "axios": "^1.0.0",
