--- a/package.json
+++ b/package.json
@@ -58,10 +58,13 @@
     "antd": "^5.11.2",
     "axios": "^1.0.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-router-dom": "6.11.2",
+    "socket.io": "^4.7.2",
     "styled-components": "5.3.6",
     "tslib": "^2.3.0"
   }
