--- a/apps/chat-svc/project.json
+++ b/apps/chat-svc/project.json
@@ -51,6 +51,10 @@
       "options": {
         "jestConfig": "apps/chat-svc/jest.config.ts"
       }
+    },
+    "docker-build": {
+      "dependsOn": ["build"],
+      "command": "docker build -f apps/chat-svc/Dockerfile . -t chat-svc"
     }
   },
   "tags": []
