--- a/package.json
+++ b/package.json
@@ -56,11 +56,12 @@
     "@phosphor-icons/react": "^2.0.15",
     "@swc/helpers": "~0.5.2",
     "antd": "^5.11.2",
-    "axios": "^1.0.0",
+    "axios": "^1.6.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-router-dom": "6.11.2",
