create message endpoint and implementation real-time chat

--- a/apps/chat-svc/project.json
+++ b/apps/chat-svc/project.json
@@ -16,7 +16,8 @@
         "tsConfig": "apps/chat-svc/tsconfig.app.json",
         "assets": ["apps/chat-svc/src/assets"],
         "isolatedConfig": true,
-        "webpackConfig": "apps/chat-svc/webpack.config.js"
+        "webpackConfig": "apps/chat-svc/webpack.config.js",
+        "generatePackageJson": true
       },
       "configurations": {
         "development": {},
