--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-is": "18.2.0",
     "react-router-dom": "6.11.2",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "styled-components": "5.3.6",
     "tslib": "^2.3.0"
   }
