--- a/apps/chat-svc/tsconfig.json
+++ b/apps/chat-svc/tsconfig.json
@@ -11,6 +11,12 @@
     }
   ],
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "@infrastructure/*": ["./src/app/infrastructure/*"],
+      "@middleware/*": ["./src/app/infrastructure/middleware/*"],
+      "@controllers/*": ["./src/app/interface/controllers/*"],
+    }
   }
 }
