--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
-    "@types/express": "4.17.13",
-    "@types/jest": "^29.4.0",
+    "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@types/react-is": "18.2.2",
+    "@types/sinon": "^17.0.4",
     "@types/styled-components": "5.1.26",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-react": "~4.0.0",
@@ -40,12 +42,14 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
+    "jest": "^30.0.5",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "17.1.3",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
     "vite": "~4.3.9",
@@ -58,6 +62,7 @@
     "antd": "^5.11.2",
     "axios": "^1.6.2",
     "express": "^4.18.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "react": "18.2.0",
